--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "nwidart/laravel-menus": "3.0.0"
+        //"nwidart/laravel-menus": "3.0.0"
     },
     "autoload": {
         "psr-4": {
